// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game Over Actions Component > should match snapshot when rendered without shallowing. 1`] = `
"<div id="game-over-actions" class="flex gap-8 justify-center w-full">
  <div id="game-over-create-new-game-button">
    <!--teleport start-->
    <!--teleport end--><button class="p-button p-component p-button p-button-raised" type="button" data-pc-name="button" data-p-disabled="false" id="create-new-game-button" data-pc-section="root" data-pd-ripple="true" style="overflow: hidden; position: relative;" pc5=""><svg class="svg-inline--fa fa-play-circle me-2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="play-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
        <path class="" fill="currentColor" d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"></path>
      </svg><span id="create-new-game-button-text">Create another game</span><span role="presentation" aria-hidden="true" data-p-ink="true" data-p-ink-active="false" class="p-ink" pd5="" data-pc-name="ripple" data-pc-section="root"></span></button>
  </div><button class="p-button p-component p-button-loading p-button-help" type="button" disabled="" data-pc-name="button" data-p-disabled="true" data-p-severity="help" id="show-game-history-button" data-pc-section="root" data-pd-ripple="true" style="overflow: hidden; position: relative;" pc6=""><svg class="svg-inline--fa fa-clock-rotate-left" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="clock-rotate-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
      <path class="" fill="currentColor" d="M75 75L41 41C25.9 25.9 0 36.6 0 57.9L0 168c0 13.3 10.7 24 24 24l110.1 0c21.4 0 32.1-25.9 17-41l-30.8-30.8C155 85.5 203 64 256 64c106 0 192 86 192 192s-86 192-192 192c-40.8 0-78.6-12.7-109.7-34.4c-14.5-10.1-34.4-6.6-44.6 7.9s-6.6 34.4 7.9 44.6C151.2 495 201.7 512 256 512c141.4 0 256-114.6 256-256S397.4 0 256 0C185.3 0 121.3 28.7 75 75zm181 53c-13.3 0-24 10.7-24 24l0 104c0 6.4 2.5 12.5 7 17l72 72c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-65-65 0-94.1c0-13.3-10.7-24-24-24z"></path>
    </svg><span>components.GameOverActions.loadingGameHistory</span><span role="presentation" aria-hidden="true" data-p-ink="true" data-p-ink-active="false" class="p-ink" pd6="" data-pc-name="ripple" data-pc-section="root"></span></button>
</div>"
`;

exports[`Game Over Actions Component > should match snapshot when rendered. 1`] = `
"<div id="game-over-actions" class="flex gap-8 justify-center w-full">
  <div id="game-over-create-new-game-button">
    <!--teleport start-->
    <!--teleport end--><button class="p-button p-component p-button p-button-raised" type="button" data-pc-name="button" data-p-disabled="false" id="create-new-game-button" data-pc-section="root" data-pd-ripple="true" style="overflow: hidden; position: relative;" pc1=""><svg class="svg-inline--fa fa-play-circle me-2" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="play-circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
        <path class="" fill="currentColor" d="M0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zM188.3 147.1c-7.6 4.2-12.3 12.3-12.3 20.9l0 176c0 8.7 4.7 16.7 12.3 20.9s16.8 4.1 24.3-.5l144-88c7.1-4.4 11.5-12.1 11.5-20.5s-4.4-16.1-11.5-20.5l-144-88c-7.4-4.5-16.7-4.7-24.3-.5z"></path>
      </svg><span id="create-new-game-button-text">Create another game</span><span role="presentation" aria-hidden="true" data-p-ink="true" data-p-ink-active="false" class="p-ink" pd1="" data-pc-name="ripple" data-pc-section="root"></span></button>
  </div><button class="p-button p-component p-button-loading p-button-help" type="button" disabled="" data-pc-name="button" data-p-disabled="true" data-p-severity="help" id="show-game-history-button" data-pc-section="root" data-pd-ripple="true" style="overflow: hidden; position: relative;" pc2=""><svg class="svg-inline--fa fa-clock-rotate-left" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="clock-rotate-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
      <path class="" fill="currentColor" d="M75 75L41 41C25.9 25.9 0 36.6 0 57.9L0 168c0 13.3 10.7 24 24 24l110.1 0c21.4 0 32.1-25.9 17-41l-30.8-30.8C155 85.5 203 64 256 64c106 0 192 86 192 192s-86 192-192 192c-40.8 0-78.6-12.7-109.7-34.4c-14.5-10.1-34.4-6.6-44.6 7.9s-6.6 34.4 7.9 44.6C151.2 495 201.7 512 256 512c141.4 0 256-114.6 256-256S397.4 0 256 0C185.3 0 121.3 28.7 75 75zm181 53c-13.3 0-24 10.7-24 24l0 104c0 6.4 2.5 12.5 7 17l72 72c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-65-65 0-94.1c0-13.3-10.7-24-24-24z"></path>
    </svg><span>components.GameOverActions.loadingGameHistory</span><span role="presentation" aria-hidden="true" data-p-ink="true" data-p-ink-active="false" class="p-ink" pd2="" data-pc-name="ripple" data-pc-section="root"></span></button>
</div>"
`;
